gitops/services/simon-game/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: simon-game
spec:
  selector:
    app.kubernetes.io/name: simon-game
  ports:
    - port: 80
      targetPort: 8080
